Upgrade to Spring Boot 2.0.4.RELEASE * Address H2 vulnerability by swapping in-memory datasource provider to HSQLDB * Documentation refinements; more specific about Gradle build steps in absence of ouath2accestoken and how to run cities-web module from project root

--- a/cities-web/build.gradle
+++ b/cities-web/build.gradle
@@ -68,7 +68,7 @@ dependencies {
     compile('com.fasterxml.jackson.module:jackson-module-kotlin')
     compile('com.zaxxer:HikariCP')
     compile('io.micrometer:micrometer-registry-prometheus:1.0.6')
-    runtime('com.h2database:h2')
+    runtime('org.hsqldb:hsqldb:2.4.1')
     runtime('org.postgresql:postgresql:42.2.4')
 }
 
