--- a/cities-web/src/test/resources/test-application.properties
+++ b/cities-web/src/test/resources/test-application.properties
@@ -1,4 +1,4 @@
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
 spring.datasource.url=
 spring.datasource.username=
 spring.datasource.password=
