--- a/cities-domain/build.gradle
+++ b/cities-domain/build.gradle
@@ -2,5 +2,5 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.hibernate:hibernate-validator:6.0.11.Final')
     compile('org.hibernate:hibernate-java8')
-    testCompile('com.h2database:h2')
+    testCompile('org.hsqldb:hsqldb:2.4.1')
 }
