--- a/cities-domain/pom.xml
+++ b/cities-domain/pom.xml
@@ -15,8 +15,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
+      <groupId>org.hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>2.4.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
