--- a/cities-web/pom.xml
+++ b/cities-web/pom.xml
@@ -62,8 +62,9 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>2.4.1</version>
 			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
